<resources>
    <string name="app_name">DayTogo</string>

    <!-- ask for input   -->
    <string name="enter_valid_email">올바른 이메일을 입력해주세요</string>
    <string name="enter_email">이메일을 입력해주세요</string>
    <string name="enter_password">비밀번호를 입력해주세요</string>
    <string name="enter_email_password">이메일과 비밀번호를 입력해주세요</string>
    <string name="enter_location_title">별명을 입력해주세요</string>
    <string name="enter_location_description">내용을 입력해주세요</string>


    <!--  button string  -->
    <string name="sign_up">회원가입</string>
    <string name="start_with_email">이메일로 시작하기</string>
    <string name="signup_with_email">계정이 없으신가요?</string>
    <string name="edit_location">장소 편집</string>
    <string name="save_location">장소 저장</string>

    <!--  failed message  -->
    <string name="check_email_password">이메일과 비밀번호를 확인해주세요</string>
    <string name="fail_sign_up">회원가입에 실패하였습니다.</string>
    <string name="retry">다시 시도 하십시오</string>

    <!--   others   -->
    <string name="notify_app_finish">한 번 더 누르면 종료됩니다.</string>

</resources>