<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="gyul.songgyubin.daytogo.auth.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:onTextChanged="@{viewmodel::onEmailTextChanged}"
            android:text="@={viewmodel.inputEmail}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWarningEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_valid_email"
            android:textColor="#ff0000"
            android:visibility="@{viewmodel.isValidEmail() ? View.GONE : View.VISIBLE}"
            app:layout_constraintLeft_toLeftOf="@+id/edEmail"
            app:layout_constraintTop_toBottomOf="@id/edEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:text="@={viewmodel.inputPassword}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWarningEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>