<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="gyul.songgyubin.daytogo.auth.viewmodel.AuthViewModel" />

        <variable
            name="activity"
            type="gyul.songgyubin.daytogo.location.view.SignInActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:onTextChanged="@{viewmodel::onEmailTextChanged}"
            android:text="@={viewmodel.inputEmail}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWarningEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_valid_email"
            android:textColor="#ff0000"
            android:visibility="@{viewmodel.isValidEmail() ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@+id/edEmail"
            app:layout_constraintTop_toBottomOf="@id/edEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:text="@={viewmodel.inputPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWarningEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFirebaseLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/start_with_email"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/signup_with_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFirebaseLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>